# Marsaglia-Box-Muller

./: CMakeLists.txt  README.md  boxmuller_auto_test.sh
include/: box_muller.hpp
src/: box_muller.cpp
test/: test.cpp
